Version 2.02.74 - 
==================================
  Simplify MD/swap signature detection in pvcreate and allow aborting.
  Remove assumption that --yes must be used only in --force mode.
  Fix file descriptor leak in swap signature detection error path.

Version 2.02.73 - 18th August 2010
==================================
  Fix potential for corruption during cluster mirror device failure.
  Use 'SINGLENODE' instead of 'dead' in clvmd singlenode messages.
  Ignore snapshots when performing mirror recovery beneath an origin.
  Pass LCK_ORIGIN_ONLY flag around cluster.
  Add suspend_lv_origin and resume_lv_origin using LCK_ORIGIN_ONLY.
  Allow internal suspend and resume of origin without its snapshots.
  Fix dev_manager_transient to access -real device not snapshot-origin.
  Monitor origin -real device below snapshot instead of overlay device.
  Don't really change monitoring status when in test mode.
  Fix some exit statuses when starting/stopping monitoring fails.
  Enable snapshot monitoring by default when dmeventd is enabled.
  Move cloned libdevmapper-event client code from segments into lib/activate.
  Fix 'lvconvert --splitmirrors' in cluster operation.
  Fix clvmd init script exit code to return 4 when executed as non-root user.
  Change default alignment of pe_start to 1MB.
  Add --norestorefile option to pvcreate.
  Require --restorefile when using pvcreate --uuid.
  Recognise and give preference to md device partitions (blkext major).
  Never scan internal LVM devices.
  Don't ignore user-specified PVs in split-mirror operations. (2.02.71)
  Fix data corruption bug in cluster mirrors.
  Require logical volume(s) to be explicitly named for lvconvert --merge.
  Avoid changing aligned pe_start as a side-effect of very verbose logging.
  Use built-in rule for device aliases: block/ < dm- < disk/ < mapper/ < other.
  Fix const warning in dev_manager_info() and _dev_manager_lv_rmnodes().
  Fix const warning in archive_file structure from archive.c.